Added file uploader code and implemented with sample app

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
               android:paddingRight="8dp"
               android:paddingTop="8dp"
               android:background="@color/colorPrimaryBg"
-              tools:context="com.ashishdas.fileuploader.sample.MainActivity">
+              tools:context="com.ashishdas.example.fileuploader.MainActivity">
 
     <TextView android:id="@+id/tv_server_url"
               android:layout_width="match_parent"
