--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -3,12 +3,12 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/colorPrimaryBg"
               android:orientation="vertical"
               android:paddingBottom="8dp"
               android:paddingLeft="8dp"
               android:paddingRight="8dp"
               android:paddingTop="8dp"
-              android:background="@color/colorPrimaryBg"
               tools:context="com.ashishdas.example.fileuploader.MainActivity">
 
     <TextView android:id="@+id/tv_server_url"
@@ -55,12 +55,30 @@
         android:progress="0"
         android:progressBackgroundTint="@color/colorPrimaryDark"/>
 
-    <Button
-        android:id="@+id/btn_upload"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
-        android:text="Upload"/>
+        android:weightSum="2">
 
+        <ToggleButton
+            android:id="@+id/tb_service_option"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:paddingRight="4dp"
+            android:layout_weight="1"
+            android:textOff="Without service"
+            android:textOn="With service"/>
+
+        <Button
+            android:id="@+id/btn_upload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="4dp"
+            android:layout_weight="1"
+            android:text="Upload"/>
+    </LinearLayout>
 </LinearLayout>
